--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,11 @@ family = "Kimpián",
 email = "s253718@dtu.dk",
 role = "aut")
   )
+person(given = "Mikel",
+family = "Garcia",
+email = "s253702@dtu.dk",
+role = "aut")
+  )
 Description: The aim of these exercises is to set up a collaborative coding project using GitHub and collaborate on creating a simple R package that replicates the central dogma of molecular biology.
 License: usethis::use_mit_license("group13")
 Encoding: UTF-8
