--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,16 +2,11 @@ Package: PackToTheFuture
 Type: Package
 Title: Central Dogma of Molecular Biology
 Version: 0.1.0
-Authors@R: 
-c(person(given = "Joshua",
-family = "Lembeck",
-email = "s253726@dtu.dk",
-role = c("aut", "cre")),
-person(given = "Ákos",
-family = "Kimpián",
-email = "s253718@dtu.dk",
-role = "aut")
-  )
+Authors@R: c(
+    person(given = "Joshua", 
+           family = "Lembeck", 
+           email = "joshinsky@outlook.de", 
+           role = c("aut", "cre"))
 Description: The aim of these exercises is to set up a collaborative coding project using GitHub and collaborate on creating a simple R package that replicates the central dogma of molecular biology.
 License: usethis::use_mit_license("group13")
 Encoding: UTF-8
